style fixup for open iconic in dark mode

--- a/folio/static/wiki-dark.css
+++ b/folio/static/wiki-dark.css
@@ -54,3 +54,11 @@ a:hover {
     background-color: #495057;
     opacity: 1;
 }
+
+.button-oi {
+    /* border: 1px solid #ced4da; */
+    border: 0;
+    border-radius: .3rem;
+    padding: 8px;
+    background-color: rgb(61 57 57);
+}
